Fix filter alignment

--- a/scss/001_guide.scss
+++ b/scss/001_guide.scss
@@ -1640,7 +1640,7 @@ $c_briefs:#8cc63f;
 	.subtitle h3{
 		text-align: right;
 	}
-	
+
 	.filters{
 		margin-bottom: 30px;
 	}
@@ -1660,7 +1660,7 @@ $c_briefs:#8cc63f;
 		
 		&::before{
 			position: absolute;
-			right: -21px;
+			left: -21px;
 			top: 7px;
 			width: 8px;
 			height: 8px;
